--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
 spring.application.name=party
+spring.datasource.url=jdbc:h2:mem:party
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=update
+
+# Thymeleaf için
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.cache=false
+
+# Server ayarlar? (iste?e ba?l?)
+server.port=8080
+server.servlet.context-path=/
+
+# Loglama seviyesi (iste?e ba?l?)
+logging.level.org.springframework=INFO
+logging.level.org.hibernate=INFO
